# ProjetoAED

./: CMakeLists.txt  README.md  main.cpp
src/: Estudantes.cpp  Estudantes.h  GestorHor.cpp  GestorHor.h  HorarioUC.cpp  HorarioUC.h  Mudanca.cpp  Mudanca.h  Pedido.cpp  Slot.cpp  Slot.h  UCturma.cpp  UCturma.h  main.cpp
src/Models/: Change.cpp  Change.h  Class.cpp  Class.h  Schedule.cpp  Schedule.h  Student.cpp  Student.h  Uc.cpp  Uc.h
src/Utils/: ChangeMan.cpp  ChangeMan.h  FileMan.cpp  FileMan.h  ListMan.cpp  ListMan.h  MenuMan.cpp  MenuMan.h
